Bug 97855 - Cannot start X with SNA
Summary: Cannot start X with SNA
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-18 21:21 UTC by Nick Sarnie
Modified: 2016-09-19 14:11 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg.log (46.98 KB, text/plain)
2016-09-18 21:21 UTC, Nick Sarnie
no flags Details
dmesg (82.59 KB, text/plain)
2016-09-18 21:21 UTC, Nick Sarnie
no flags Details

Description Nick Sarnie 2016-09-18 21:21:10 UTC
Created attachment 126607 [details]
Xorg.log

Hi,

If I try to use SNA, I cannot start X. The following assert fails: na_screen_init:1108 assertion 'to_screen_from_sna(sna) == NULL' failed


UXA and modesetting work fine. dmesg and Xorg.log are attached.

Let me know if you need anything else.

Thanks,
Comment 1 Nick Sarnie 2016-09-18 21:21:25 UTC
Created attachment 126608 [details]
dmesg
Comment 2 Chris Wilson 2016-09-19 07:29:49 UTC
Iirc that assert is there just to remind us that we could not rely on scrn->screen being set at that point.
Comment 3 Chris Wilson 2016-09-19 08:36:17 UTC
commit b45dbdbd446108745b39b305303b457f5e876989
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Sep 19 09:34:32 2016 +0100

    sna: Update sanity check for next stage of Xorg ABI
    
    Now X will set the scrn->screen backpointer before Init, update our
    assertion to track.
    
    Reported-by: Nick Sarnie <commendsarnex@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97855
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 4 Nick Sarnie 2016-09-19 14:11:59 UTC
Hi Chris,

The patch fixes the issue. 

Thanks,
Nick


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.