sna: Update sanity check for next stage of Xorg ABI

Now X will set the scrn->screen backpointer before Init, update our
assertion to track.

Reported-by: Nick Sarnie <commendsarnex@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97855
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>